Fix `radio` and `checkbox` top-margin on IE9-

--- a/_form-control.scss
+++ b/_form-control.scss
@@ -115,8 +115,10 @@ $bits-components-ns: 'bits-' !default;
  * Radio control
  *
  * 1. Radio needs a bit more negative margin.
+ * 2. Again, not on IE9-.
  */
 
 .#{$bits-components-ns}FormControl--radio {
   margin-top: -2px; /* 1 */
+  margin-top: 0\9; /* 2 */
 }
